--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 
             <img src="./images/lead-polka.jpg" alt="Карта машрутка от Пскова до Улан-Удэ" class="lead__image">
             <figcaption class="lead__caption">
-                Ваша полка - верхняя
+                ВАША ПОЛКА - ВЕРХНЯЯ
             </figcaption>
         </section>
+
         <section class="intro">
             <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и
@@ -56,6 +57,7 @@
             <img src="./images/photo-grid-baikal-2.jpg" alt="Байкал" class="photo-grid__item">
             <img src="./images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item">
         </section>
+
         <section class="places">
             <div class="place">
                 <h2 class="place__title">Куршская <br> коса</h2>
@@ -127,13 +129,16 @@
 
 
             </div>
+
         </section>
+
         <section class="cover">
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background">
                 <h2 class="cover__title">До Байкала<br>«на собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
             </a>
         </section>
+
         <footer class="footer">
             <nav class="footer__link">
                 <a href="https://yandex.ru/maps" class="footer__link-item">Карты</a>
