--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Путешествия по России</title>
     <link rel="stylesheet" href="./pages/page.css">
+
 </head>
 
 <body>
@@ -21,11 +22,12 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-
-            <img src="./images/lead-polka.jpg" alt="Карта машрутка от Пскова до Улан-Удэ" class="lead__image">
-            <figcaption class="lead__caption">
-                ВАША ПОЛКА - ВЕРХНЯЯ
-            </figcaption>
+            <figure>
+                <img src="./images/lead-polka.jpg" alt="Карта машрутка от Пскова до Улан-Удэ" class="lead__image">
+                <figcaption class="lead__caption">
+                    ВАША ПОЛКА - ВЕРХНЯЯ
+                </figcaption>
+            </figure>
         </section>
 
         <section class="intro">
@@ -42,7 +44,7 @@
             </ul>
         </section>
 
-        <section class="photo-grid">
+        <div class="photo-grid">
 
             <img src="./images/photo-grid-train.jpg" alt="Вид из окна поезда" class="photo-grid__item">
             <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Гора химера" class="photo-grid__item">
@@ -56,7 +58,7 @@
             <img src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка" class="photo-grid__item">
             <img src="./images/photo-grid-baikal-2.jpg" alt="Байкал" class="photo-grid__item">
             <img src="./images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item">
-        </section>
+        </div>
 
         <section class="places">
             <div class="place">
@@ -133,7 +135,9 @@
         </section>
 
         <section class="cover">
-            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background">
+
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+                <img src="./images/__background.jpg" alt="Поезда на рельсах" class="cover__background">
                 <h2 class="cover__title">До Байкала<br>«на собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
             </a>
