--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 </head>
 
 <body>
-    <div class="page">
+    <div class="wrapper">
         <header class="header">
             <img src="./images/header-logo.svg" alt="Логотип карты Россия" class="logo header__logo">
             <nav>
-                <a href="#" class="header__lang-link">Ru</a>
+                <a href="#" class="header__lang-link header__lang-link_underline">Ru</a>
                 <a href="#" class="header__lang-link">En</a>
             </nav>
         </header>
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <figure>
+            <figure сlass="lead__signature">
                 <img src="./images/lead-polka.jpg" alt="Карта машрутка от Пскова до Улан-Удэ" class="lead__image">
                 <figcaption class="lead__caption">
                     ВАША ПОЛКА - ВЕРХНЯЯ
@@ -136,20 +136,23 @@
 
         <section class="cover">
 
-            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
-                <img src="./images/__background.jpg" alt="Поезда на рельсах" class="cover__background">
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background">
+
                 <h2 class="cover__title">До Байкала<br>«на собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+
             </a>
         </section>
 
         <footer class="footer">
-            <nav class="footer__link">
-                <a href="https://yandex.ru/maps" class="footer__link-item">Карты</a>
-                <a href="https://yandex.ru/pogoda" class="footer__link-item">Погода</a>
-                <a href="https://rasp.yandex.ru" class="footer__link-item">Расписание</a>
-                <a href="https://calendar.yandex.ru" class="footer__link-item">Календарь</a>
-                <a href="https://travel.yandex.ru" class="footer__link-item">Путешествия</a>
+            <nav>
+                <ul class="footer__link">
+                    <li> <a href="https://yandex.ru/maps" class="footer__link-item">Карты</a></li>
+                    <li> <a href="https://yandex.ru/pogoda" class="footer__link-item">Погода</a></li>
+                    <li> <a href="https://rasp.yandex.ru" class="footer__link-item">Расписание</a></li>
+                    <li> <a href="https://calendar.yandex.ru" class="footer__link-item">Календарь</a></li>
+                    <li> <a href="https://travel.yandex.ru" class="footer__link-item">Путешествия</a></li>
+                </ul>
             </nav>
             <div class="footer__copyright">© 2022. Лагузов Михаил</div>
         </footer>
