--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Путешествия по России</title>
-    <link rel="stylesheet" href="./pages/page.css">
+    <link rel="stylesheet" href="./index.css">
 
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="page">
         <header class="header">
             <img src="./images/header-logo.svg" alt="Логотип карты Россия" class="logo header__logo">
             <nav>
@@ -22,7 +22,7 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <figure сlass="lead__signature">
+            <figure>
                 <img src="./images/lead-polka.jpg" alt="Карта машрутка от Пскова до Улан-Удэ" class="lead__image">
                 <figcaption class="lead__caption">
                     ВАША ПОЛКА - ВЕРХНЯЯ
