--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <section class="places">
             <div class="place">
-                <h2 class="place__title">Куршская <br> коса</h2>
+                <h2 class="place__title">Куршская &emsp; коса</h2>
                 <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
                 <div class="place__website">
                     <p class="place__website__url-heading">URL</p>
