--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в
                 свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
-                <li class="intro__list_item">Часовых поясов 11</li>
-                <li class="intro__list_item">Объектов природного наследия ЮНЕСКО 12</li>
-                <li class="intro__list_item">Объектов культурного наследния ЮНЕСКО 16</li>
-                <li class="intro__list_item">Природных заповедников 105</li>
-                <li class="intro__list_item">Аэропортов 241</li>
+                <li>Часовых поясов 11</li>
+                <li>Объектов природного наследия ЮНЕСКО 12</li>
+                <li>Объектов культурного наследния ЮНЕСКО 16</li>
+                <li>Природных заповедников 105</li>
+                <li>Аэропортов 241</li>
             </ul>
         </section>
 
@@ -65,8 +65,8 @@
                 <h2 class="place__title">Куршская &emsp; коса</h2>
                 <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
                 <div class="place__website">
-                    <p class="place__website__url-heading">URL</p>
-                    <a href="http://park-kosa.ru" class="place__website_link">park-kosa.ru</a></div>
+                    <p class="place__website_url-heading">URL</p>
+                    <a href="http://park-kosa.ru" class="website_link">park-kosa.ru</a></div>
                 <div class="place__paragraph">
                     <p class="place__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
 
@@ -79,8 +79,8 @@
                 <h2 class="place__title">Кольский</h2>
                 <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
                 <div class="place__website">
-                    <p class="place__website__url-heading">URL</p>
-                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website_link">National Geographic</a>
+                    <p class="place__website_url-heading">URL</p>
+                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="website_link">National Geographic</a>
                 </div>
                 <div class="place__paragraph">
                     <p class="place__text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -94,8 +94,8 @@
                 <h2 class="place__title">Алтай</h2>
                 <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
                 <div class="place__website">
-                    <p class="place__website__url-heading">URL</p>
-                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website_link">Facebook</a>
+                    <p class="place__website_url-heading">URL</p>
+                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="website_link">Facebook</a>
                 </div>
                 <div class="place__paragraph">
                     <p class="place__text">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом
@@ -109,8 +109,8 @@
                 <h2 class="place__title">Зимний Байкал</h2>
                 <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
                 <div class="place__website">
-                    <p class="place__website__url-heading">URL</p>
-                    <a href="https://vk.com/baikalmile" class="place__website_link">https://vk.com/baikalmile</a></div>
+                    <p class="place__website_url-heading">URL</p>
+                    <a href="https://vk.com/baikalmile" class="website_link">https://vk.com/baikalmile</a></div>
                 <div class="place__paragraph">
                     <p class="place__text">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
                     <p class="place__text">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
@@ -121,8 +121,8 @@
                 <h2 class="place__title">Карелия</h2>
                 <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
                 <div class="place__website">
-                    <p class="place__website__url-heading">URL</p>
-                    <a href="http://vodlozero.ru" class="place__website_link">http://vodlozero.ru/</a></div>
+                    <p class="place__website_url-heading">URL</p>
+                    <a href="http://vodlozero.ru" class="website_link">http://vodlozero.ru/</a></div>
                 <div class="place__paragraph">
                     <p class="place__text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали
                         топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
