--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <h2 class="place__title">Куршская &emsp; коса</h2>
                 <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
                 <div class="place__website">
-                    <p class="place__website_url-heading">URL</p>
-                    <a href="http://park-kosa.ru" class="website_link">park-kosa.ru</a></div>
+                    <p class="place__url-heading">URL</p>
+                    <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a></div>
                 <div class="place__paragraph">
                     <p class="place__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
 
