--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class=" page ">
-        <!-- <header class="header ">
+        <header class="header ">
             <img src="./images/header-logo.svg " alt="Логотип карты Россия " class="logo header__logo ">
             <nav>
                 <ul class="header__lang-menu">
@@ -20,9 +20,9 @@
                     <li><a href="#" class="header__lang-link">En</a></li>
                 </ul>
             </nav>
-        </header> -->
+        </header>
         <main class="main">
-            <!-- <section class="lead">
+            <section class="lead">
                 <h1 class="lead__title ">Путешествия по России</h1>
                 <p class="lead__subtitle ">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <figure class="illustration">
@@ -31,7 +31,7 @@
                         ВАША ПОЛКА - ВЕРХНЯЯ
                     </figcaption>
                 </figure>
-            </section> -->
+            </section>
 
             <section class="intro ">
                 <h2 class="intro__title ">Чего мы там не видели?</h2>
