--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Путешествия по России</title>
-    <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="./pages/index.css">
 
 </head>
 
 <body>
-    <div class=" page ">
+    <div class="page">
         <header class="header ">
             <img src="./images/header-logo.svg " alt="Логотип карты Россия " class="logo header__logo ">
             <nav>
@@ -25,7 +25,7 @@
             <section class="lead">
                 <h1 class="lead__title ">Путешествия по России</h1>
                 <p class="lead__subtitle ">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <figure class="illustration">
+                <figure class="lead__illustration">
                     <img src="./images/lead-polka.jpg " alt="Карта машрутка от Пскова до Улан-Удэ " class="lead__image ">
                     <figcaption class="lead__caption ">
                         ВАША ПОЛКА - ВЕРХНЯЯ
@@ -46,7 +46,7 @@
                     <li>Аэропортов 241</li>
                 </ul>
             </section>
-            <!--
+
             <div class="photo-grid ">
 
                 <img src="./images/photo-grid-train.jpg " alt="Вид из окна поезда " class="photo-grid__item ">
@@ -141,13 +141,13 @@
 
                 <a href="https://stampsy.com/na-elektrichkakh-do-baikala " class="cover__background ">
 
-                    <h2 class="cover__title ">До Байкала&nbsp; «на собаках»</h2>
+                    <h2 class="cover__title ">До Байкала «на собаках»</h2>
                     <p class="cover__subtitle ">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
 
                 </a>
-            </section> -->
+            </section>
         </main>
-        <!-- <footer class="footer ">
+        <footer class="footer ">
             <nav>
                 <ul class="footer__link ">
                     <li> <a href="https://yandex.ru/maps " class="footer__link-item ">Карты</a></li>
@@ -157,8 +157,8 @@
                     <li> <a href="https://travel.yandex.ru " class="footer__link-item ">Путешествия</a></li>
                 </ul>
             </nav>
-            <div class="footer__copyright ">© 2022. Лагузов Михаил</div>
-        </footer> -->
+            <p class="footer__copyright ">&commat; 2022. Лагузов Михаил</p>
+        </footer>
     </div>
 </body>
 
